--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -370,7 +370,7 @@ tail(okcupid_profiles, 3)
 
 You can a short summary of your data with the summary() command. Note that we will use the summary() command in many places in the guide. The output of the summary() command changes depending on what you give it - that is put inside the brackets. You can give the summary() command many things such as data, the results of a regression analysis, etc.
 
-Try the command below in the Console. You will see that summary() give the mean and median for each of the numeric variables (age and height).
+Try the command below in the Console. You will see that summary() gives the mean and median for each of the numeric variables (age and height).
 
 ```{r}
 summary(okcupid_profiles)
