--- a/02-tidy_intro.Rmd
+++ b/02-tidy_intro.Rmd
@@ -6,7 +6,7 @@ In this chapter we focus on teaching you foundational skills for data preparatio
 
 * [R for Data Science book](https://r4ds.had.co.nz). This is an excellent free online book! But it does reflect an exploratory analysis mindset compared to the confirmatory mindset we typically use in Psychological science.
 
-* You may find a [cheatsheet](https://www.rstudio.com/resources/cheatsheets/) helpful. Specifically, the [Data Transformation](https://github.com/rstudio/cheatsheets/raw/master/data-transformation.pdf) cheatsheet. 
+* You may find a [cheatsheet](https://www.rstudio.com/resources/cheatsheets/) helpful. Specifically, the [Data Transformation](https://rstudio.github.io/cheatsheets/data-transformation.pdf) cheatsheet. 
 
 * [tidyverse website](https://www.tidyverse.org) 
 
