--- a/packages.bib
+++ b/packages.bib
@@ -2,7 +2,8 @@
   title = {apaTables: Create American Psychological Association (APA) Style Tables},
   author = {David Stanley},
   year = {2023},
-  note = {https://github.com/dstanley4/apaTables},
+  note = {R package version 3.0.0},
+  url = {https://github.com/dstanley4/apaTables},
 }
 
 @Manual{R-base,
@@ -19,7 +20,7 @@
   author = {Yihui Xie},
   year = {2023},
   note = {R package version 0.35},
-  url = {https://CRAN.R-project.org/package=bookdown},
+  url = {https://github.com/rstudio/bookdown},
 }
 
 @Manual{R-broom,
@@ -27,7 +28,7 @@
   author = {David Robinson and Alex Hayes and Simon Couch},
   year = {2023},
   note = {R package version 1.0.5},
-  url = {https://CRAN.R-project.org/package=broom},
+  url = {https://broom.tidymodels.org/},
 }
 
 @Manual{R-cocor,
@@ -43,7 +44,7 @@
   author = {Rhian Davies and Steph Locke and Lucy {D'Agostino McGowan}},
   year = {2022},
   note = {R package version 0.1.6},
-  url = {https://CRAN.R-project.org/package=datasauRus},
+  url = {https://github.com/jumpingrivers/datasauRus},
 }
 
 @Manual{R-dplyr,
@@ -51,29 +52,17 @@
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller and Davis Vaughan},
   year = {2023},
   note = {R package version 1.1.3},
-  url = {https://CRAN.R-project.org/package=dplyr},
+  url = {https://dplyr.tidyverse.org},
 }
 
-@Manual{R-emoGG,
-  title = {emoGG: Use Emoji in ggplot2},
-  author = {David L Miller},
-  year = {2023},
-  note = {R package version 0.0.4},
-}
 
-@Manual{R-fastInteraction,
-  title = {fastInteraction: Continuous variable interaction output and graphs (2D/3D)},
-  author = {David Stanley},
-  year = {2019},
-  note = {R package version 0.1.2},
-}
 
 @Manual{R-forcats,
   title = {forcats: Tools for Working with Categorical Variables (Factors)},
   author = {Hadley Wickham},
   year = {2023},
   note = {R package version 1.0.0},
-  url = {https://CRAN.R-project.org/package=forcats},
+  url = {https://forcats.tidyverse.org/},
 }
 
 @Manual{R-GGally,
@@ -81,7 +70,7 @@
   author = {Barret Schloerke and Di Cook and Joseph Larmarange and Francois Briatte and Moritz Marbach and Edwin Thoen and Amos Elberg and Jason Crowley},
   year = {2021},
   note = {R package version 2.1.2},
-  url = {https://CRAN.R-project.org/package=GGally},
+  url = {https://ggobi.github.io/ggally/},
 }
 
 @Manual{R-ggplot2,
@@ -89,7 +78,7 @@
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
   year = {2023},
   note = {R package version 3.4.3},
-  url = {https://CRAN.R-project.org/package=ggplot2},
+  url = {https://ggplot2.tidyverse.org},
 }
 
 @Manual{R-janitor,
@@ -97,30 +86,24 @@
   author = {Sam Firke},
   year = {2023},
   note = {R package version 2.2.0},
-  url = {https://CRAN.R-project.org/package=janitor},
+  url = {https://github.com/sfirke/janitor},
 }
 
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2023},
-  note = {R package version 1.43},
+  note = {R package version 1.44},
   url = {https://yihui.org/knitr/},
 }
 
-@Manual{R-learnSampling,
-  title = {learnSampling: Tools to help learn sampling},
-  author = {David J. Stanley},
-  year = {2020},
-  note = {R package version 0.2},
-}
 
 @Manual{R-lubridate,
   title = {lubridate: Make Dealing with Dates a Little Easier},
   author = {Vitalie Spinu and Garrett Grolemund and Hadley Wickham},
   year = {2023},
-  note = {R package version 1.9.2},
-  url = {https://CRAN.R-project.org/package=lubridate},
+  note = {R package version 1.9.3},
+  url = {https://lubridate.tidyverse.org},
 }
 
 @Manual{R-MBESS,
@@ -136,7 +119,7 @@
   author = {Hadley Wickham and Lionel Henry},
   year = {2023},
   note = {R package version 1.0.2},
-  url = {https://CRAN.R-project.org/package=purrr},
+  url = {https://purrr.tidyverse.org/},
 }
 
 @Manual{R-pwr,
@@ -147,28 +130,21 @@
   url = {https://github.com/heliosdrm/pwr},
 }
 
-@Manual{R-RColorBrewer,
-  title = {RColorBrewer: ColorBrewer Palettes},
-  author = {Erich Neuwirth},
-  year = {2022},
-  note = {R package version 1.1-3},
-  url = {https://CRAN.R-project.org/package=RColorBrewer},
-}
 
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
   year = {2023},
   note = {R package version 2.1.4},
-  url = {https://CRAN.R-project.org/package=readr},
+  url = {https://readr.tidyverse.org},
 }
 
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Christophe Dervieux and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2023},
-  note = {R package version 2.24},
-  url = {https://CRAN.R-project.org/package=rmarkdown},
+  note = {R package version 2.25},
+  url = {https://github.com/rstudio/rmarkdown},
 }
 
 @Manual{R-skimr,
@@ -176,7 +152,7 @@
   author = {Elin Waring and Michael Quinn and Amelia McNamara and Eduardo {Arino de la Rubia} and Hao Zhu and Shannon Ellis},
   year = {2022},
   note = {R package version 2.1.5},
-  url = {https://CRAN.R-project.org/package=skimr},
+  url = {https://docs.ropensci.org/skimr/},
 }
 
 @Manual{R-stringr,
@@ -184,7 +160,7 @@
   author = {Hadley Wickham},
   year = {2022},
   note = {R package version 1.5.0},
-  url = {https://CRAN.R-project.org/package=stringr},
+  url = {https://stringr.tidyverse.org},
 }
 
 @Manual{R-tibble,
@@ -192,7 +168,7 @@
   author = {Kirill Müller and Hadley Wickham},
   year = {2023},
   note = {R package version 3.2.1},
-  url = {https://CRAN.R-project.org/package=tibble},
+  url = {https://tibble.tidyverse.org/},
 }
 
 @Manual{R-tidyr,
@@ -200,7 +176,7 @@
   author = {Hadley Wickham and Davis Vaughan and Maximilian Girlich},
   year = {2023},
   note = {R package version 1.3.0},
-  url = {https://CRAN.R-project.org/package=tidyr},
+  url = {https://tidyr.tidyverse.org},
 }
 
 @Manual{R-tidyverse,
@@ -208,14 +184,14 @@
   author = {Hadley Wickham},
   year = {2023},
   note = {R package version 2.0.0},
-  url = {https://CRAN.R-project.org/package=tidyverse},
+  url = {https://tidyverse.tidyverse.org},
 }
 
 @Manual{R-TOSTER,
   title = {TOSTER: Two One-Sided Tests (TOST) Equivalence Testing},
   author = {Daniel Lakens and Aaron Caldwell},
   year = {2023},
-  note = {R package version 0.7.1},
+  note = {R package version 0.8.0},
   url = {https://aaroncaldwell.us/TOSTERpkg/},
 }
 
