update language is one-way equal means chapter

--- a/packages.bib
+++ b/packages.bib
@@ -115,8 +115,7 @@
   title = {learnSampling: Tools to help learn sampling},
   author = {David J. Stanley},
   year = {2020},
-  note = {R package version 0.2, commit f1ea819aacca66c11593bc0dc37c4b2132a189cf},
-  url = {https://github.com/dstanley4/learnSampling},
+  note = {R package version 0.2},
 }
 
 @Manual{R-lubridate,
