--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -16,8 +16,8 @@ In this chapter, we focus on describing the distribution of sample means. Our go
 
 | Approach  | Estimation Formula | Goal  |
 :----------:|:----:|:--------|
-| Approach 1: Total |  $s_{\bar{x}}^2=\frac{\sum (\bar{x}-\bar{\bar{x}})^2}{a-1}$ | Estimate the variance of the sampling distribution. That is, estimate variance of sample mean due to all sources (population differences, random sampling error, etc.).
-| Approach 2: CLT |   $s_{\bar{x}}^2=\frac{s_{people}^2}{n}$  | Estimate the variance in sample mean due ONLY to random sampling error.|
+| Approach 1: Estimated Observed Variance |  $s_{\bar{x}}^2=\frac{\sum (\bar{x}-\bar{\bar{x}})^2}{a-1}$ | Estimate the variance of the sampling distribution. That is, estimate variance of sample mean due to all sources (population differences, random sampling error, etc.).
+| Approach 2: Estimated Expected Variance |   $s_{\bar{x}}^2=\frac{s_{people}^2}{n}$  | Estimate the variance in sample mean due ONLY to random sampling error.|
 
 
 Understanding the logic behind both approaches for estimating the variance of the distribution of sample means is critical. In this chapter, where there is one population of people, the two approaches estimate the same thing - variabilty in sample means **due to random sampling**. However, in future chapters, where there are multiple populations of people with different means, the two approaches estimate different things. Consequently, to prepare you for those more complex future chapters, it's important to understand the logic behind both approaches in the simple case - where there is a single population of people.
@@ -94,7 +94,7 @@ A key point to remember is that the mean of the sample means, $\mu_{\bar{x}}$, w
 
 When there is *one* **population of people** (see Figure \@ref(fig:chdeepfigure1)A) there is a single distribution of sample means that corresponds to that population (see Figure \@ref(fig:chdeepfigure1)B). In this scenario, the sample means differ only because of random sampling. There are two approaches for calculating the variance of this distribution of sample means.
 
-### Approach 1: Total: Calculate the variance of infinite sample means
+### Approach 1: Observed Variance (all sources of variabilty)
 
 In this first method, we use an infinite number of sample means and simply calculate the variance, see Equation \@ref(eq:popvarxbardeep) below.
 
@@ -131,7 +131,7 @@ Thus, the "population" variance of the distribution of sample means ($\sigma_{\b
 
 **When there is only one population of people** this formula will reflect variability in sample means due to random sampling. When there is more than one population of people - it becomes more complicated. We'll discuss that situation in a future chapter.
 
-### Approach 2: CLT: *Calculation* of variance due to sampling error
+### Approach 2: Expected Variance (random sampling only)
 
 Fortunately, **when sampling error is the ONLY source of variability in sample means** there is a shortcut. We don't need to obtain an infinite number of sample means to determine the variance of the distribution of an infinite number of sample means, Figure \@ref(fig:chdeepfigure1)B. There is a "shortcut formula" we can use based on the Central Limit Theorem (CLT), see the formula below.
 
@@ -170,16 +170,16 @@ Thus, the "population" variance of the distribution of sample means ($\sigma_{\b
 
 To begin, we are looking at a distribution of sampling means **where the means differed only due to random sampling error**. In this situation, we have calculated the variance of the distribution of sample means using two different approaches.
 
--   Approach 1: Total variance of sample means calculated using sample means and the variance formula
+-   Approach 1 Estimated Observed Variance: Total variance of sample means calculated using sample means and the variance formula
 
--   Approach 2: Variance of sample means, due to random sampling error, calculated using CLT shortcut formula
+-   Approach 2 Estimated Expected Variance: Variance of sample means, due to random sampling error, calculated using CLT shortcut formula
 
 Although we can just look at the numbers resulting from these two approaches and compare them, that's not how statisticians typically handle such comparisons. The approach used by statisticians to compare two numbers is to create a ratio. That is, take one number and divide it by the other number. If the two numbers are the same the ratio will be 1.00. If the ratio is larger than 1.00 it means the number on the top was bigger than the number on the bottom.
 
 
 $$
 \begin{aligned} 
-\text{ratio comparing approaches} &= \frac{\text{total variance of sample means }}{\text{variance of sample means due to random sampling error}}\\
+\text{ratio comparing approaches} &= \frac{\text{Observed: total variance of sample means }}{\text{Expected: variance of sample means due to random sampling error}}\\
 &=\frac{\frac{\sum_{i=1}^{A=\infty}{(\bar{x}_i - \mu_{\bar{x}})^2}}{A}}{\frac{\sigma_{people}^2}{n}}\\
 &=\frac{31.26472}{31.26472}\\
 &= 1.00\\
@@ -188,7 +188,7 @@ $$
 
 You can see the ratio comparing these two approaches below is 1.00 - so we conclude two approaches produced the same result. If the number on the top of the ratio was the *larger* of the two, then the value of the ratio would be greater than 1.00. In contrast, if the number on the top of the ratio was the *smaller* of the two, then the value of the ratio would be less than 1.00. Be sure you understand how to interpet the value of a ratio using these rules before continuing.
 
-**CRITICAL: Think about what this means.** Both approaches produced the same number. The **total variance approach** resulted in the same number as the **random samplingly only approach**. *So we can conclude the only reason the sample means differed from each other was random sampling*. Go back and re-read this paragraph a few times until you are sure you understand this crucial point.
+**CRITICAL: Think about what this means.** Both approaches produced the same number. The **observed variance: total variance approach** resulted in the same number as the **expected variance: random sampling only approach**. *So we can conclude the only reason the sample means differed from each other was random sampling*. Go back and re-read this paragraph a few times until you are sure you understand this crucial point.
 
 **CALCULATION VS ESTIMATION**. In this section, we focused on actually **calculating** the variance of the distribution of sample means using two approaches. But to actually **calculate** this variance we needed an infinite number of sample means (Approach 1) or knowledge of the population of people variance (Approach 2). Consequently, it's impractical to **calculate** either quantity.
 
@@ -269,7 +269,7 @@ In this section we focus on estimating the variance of the distribution of sampl
 |       2       |         5         |            `r sample_mean2`             |                        `r est_pop_var2`                        |
 |       3       |         5         |            `r sample_mean3`             |                        `r est_pop_var3`                        |
 
-### Approach 1: Estimate the total  variance of infinite sample means using 3 sample means
+### Approach 1: Estimated Observed Variance (all sources variability)
 
 We can use the sample means presented in the table above to estimate the variance of the distribution of sample means as illustrated in the formula below. Recall, we use a lower case character, $a$, to represent the number of sample means (in the case because we have 3 sample means $a = 3$). We think of these three sample means as a subset ($a = 3$) of the distribution of an infinite number of sample means (i.e., a population of sample means, $K=\infty$) illustrated in Figure \@ref(fig:chdeepfigure1)B. Consequently, we use the standard approach of estimating the variance of a larger set of elements from a (i.e., a population of sample means) subset of those elements (i.e., a sample of sample means) by including "-1" in the denominator of the variance formula, see Equation \@ref(eq:estpopvarxbardeep) below.
 
@@ -305,9 +305,9 @@ Thus, the "population" variance of the distribution of sample means ($\sigma_{\b
 
 **IMPORTANT:** The denominator of this variance calculation is $2$ (i.e., $3-1$). Therefore, we say there are 2 degrees of freedom associated with this estimate of the variance of the infinite number of sample means.
 
-### Approach 2: CLT shortcut: *Estimation* of variance due to random sampling error
+### Approach 2: Estimated Expected Variance ( random sampling only)
 
-We can use the information presented in the table above in another way to estimate the variance of the distribution of sample means. Indeed, recall that than another approach to calculating the variance of the distribution of sample means is to use the shortcut formula based on the Central Limit Theorem (CLT), Equation \@ref(eq:popvarCLTxbardeep) above, repeated below for clarity.
+We can use the information presented in the table above in another way to estimate the variance of the distribution of sample means. Indeed, recall that than another approach to calculating the variance of the distribution of sample means is to use Expected Variance, Equation \@ref(eq:popvarCLTxbardeep) above, repeated below for clarity.
 
 $$
 \begin{aligned}
@@ -352,12 +352,12 @@ We created the average variance estimate,$s_{people}^2 =`r est_pop_var_pooled`$,
 
 We use different names to refer to the resulting average variance estimate - we could just call it a better estimate of the population variance ($s_{people}^2$). But, statisticians also use the term pooled variance ($s_{pooled}^2$) to refer it. Other times, statisticians use the term Mean Square Error ($MSE$) to refer to it. You should realize that these are all just synonyms for variance of the population of people illustrated in Figure \@ref(fig:chdeepfigure1)A: $s_{people}^2 = s_{pooled}^2 = MSE_{people} = MSE$.
 
-#### Estimating $\sigma_{\bar{x}}^2$ with CLT
+#### Estimating $\sigma_{\bar{x}}^2$ with Expected Variance Approach
 
 
 **If we assume that random sampling error is the only source of variance in the distribution of sample means** we can estimate $\sigma_{\bar{x}}^2$ using the formula we derived from the Central Limit Theorem. 
 
-More specifically, armed with the estimate of the variance of the people in the population ($s_{people}^2$) we can use the CLT shortcut formula to obtain an estimate of the variance of the distribution of sample means using Equation \@ref(eq:estpopvarmeansclt) below.
+More specifically, armed with the estimate of the variance of the people in the population ($s_{people}^2$) we can use the Estimated Expected Variance formula to obtain an estimate of the variance of the distribution of sample means using Equation \@ref(eq:estpopvarmeansclt) below.
 
 ```{=tex}
 \begin{equation} 
@@ -375,9 +375,9 @@ s_{\bar{x}}^2 &= \frac{s_{people}^2}{n}\\
 \end{aligned} 
 $$
 
-Thus, using Approach 2: CLT shortcut, our estimate of the variance of the distribution of sample means, **due to random sampling error** is $s_{\bar{x}}^2 = `r est_mean_var_clt`$.
+Thus, using Approach 2: Estimated Expected Variance, our estimate of the variance of the distribution of sample means, **due to random sampling error** is $s_{\bar{x}}^2 = `r est_mean_var_clt`$.
 
-**IMPORTANT:** This estimate of the variance of the distribution of sample means was based on using an estimate of the variance of the people in the population (i.e., $s_{people}^2 =`r est_pop_var_pooled`$). There were 12 degrees of freedom associated with $s_{people}^2$ which $s_{\bar{X}}^2$ depends upon. So we say there are 12 degrees of freedom associated with $s_{\bar{X}}^2$.
+**IMPORTANT:** This estimate of the variance of the distribution of sample means used estimate of the variance of the people in the population (i.e., $s_{people}^2 =`r est_pop_var_pooled`$). There were 12 degrees of freedom associated with $s_{people}^2$ which $s_{\bar{X}}^2$ depends upon. So we say there are 12 degrees of freedom associated with $s_{\bar{X}}^2$.
 
 ### Ratio comparison of two approaches
 
@@ -385,14 +385,14 @@ The table below summarizes our work so far.
 
 |       Attribute        |       Unknown Parameter        |                                    Estimate of Parameter                                     | $s_{\bar{x}}^2$ degrees of freedom |
 |:----------------------:|:------------------------------:|:--------------------------------------------------------------------------------------------:|:----------------------------------:|
-|   Approach 1: Total variance   | $\sigma_{\bar{x}}^2 =31.26472$ | $s_{\bar{x}}^2 = \frac{\sum_{i=1}^{a}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}= `r method1_var`$ |                 $a-1=3-1=2$                  |
-| Approach 2: CLT Random sampling variance | $\sigma_{\bar{x}}^2 =31.26472$ |                $s_{\bar{x}}^2 = \frac{s_{people}^2}{n}=`r est_mean_var_clt`$                 |                 $a(n-1)=3(5-1)=12$                 |
+|   Approach 1: Estimated Observed Variance   | $\sigma_{\bar{x}}^2 =31.26472$ | $s_{\bar{x}}^2 = \frac{\sum_{i=1}^{a}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}= `r method1_var`$ |                 $a-1=3-1=2$                  |
+| Approach 2: Estimated Expected Variance | $\sigma_{\bar{x}}^2 =31.26472$ |                $s_{\bar{x}}^2 = \frac{s_{people}^2}{n}=`r est_mean_var_clt`$                 |                 $a(n-1)=3(5-1)=12$                 |
 
-In the table above, Approach 1, estimates the total variance (from all sources) in sample means. In contrast, Approach 2, estimates the variance in sample means due strictly to random sampling error. In this particular scenario **we know** the only source of variability in sample means is random sampling error. So...we do the two numbers differ?
+In the table above, Approach 1 Estimated Observed Variance, estimates the total variance (from all sources) in sample means. In contrast, Approach 2 Estimated Expected Variance, estimates the variance in sample means due only to random sampling error. In this particular scenario **we know** the only source of variability in sample means is random sampling error. So, do the two numbers differ?
 
-Recall, that in Approach 1 we didn't have all of the sample means in the infinity large distribution of sample means. We based our estimate on only three of those means. So our estimate using, Approach 1, will differ from the truth due to sampling error -- because we only have 3 sample means - not the full infinite set of sample means.
+Recall, that in Approach 1 Estimated Observed Variance we didn't have all of the sample means in the infinity large distribution of sample means. We based our estimate on only three of those means. So our estimate using, Approach 1, will differ from the truth due to sampling error -- because we only have 3 sample means - not the full infinite set of sample means.
 
-Likewise, recall that in Approach 2 we didn't know the variance of the population of people ($\sigma_{people}^2$). We had to rely on an esimate of that value ($s_{people}^2$), based on 15 people (three sets of 5). Consequently, Approach 2 will differ from the truth as well due to random sampling error.
+Likewise, recall that in Approach 2 Estimated Expected Variance we didn't know the variance of the population of people ($\sigma_{people}^2$). We had to rely on an esimate of that value ($s_{people}^2$), based on 15 people (three sets of 5). Consequently, Approach 2 will differ from the truth as well due to random sampling error.
 
 Because both Approach 1 and 2 will differ from the true due to random sampling error, when we construct a ratio, it too will differ from the truth due to random sampling error. That is, when we construct a ratio based on those variance estimate ($s_{\bar{x}}^2 = \frac{\sum_{i=1}^{a}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}= `r method1_var`$ and $s_{\bar{x}}^2 = \frac{s_{people}^2}{n}=`r est_mean_var_clt`$) the ratio will differ from "the truth" (1.00) due to sampling error.
 
@@ -400,7 +400,7 @@ Because both Approach 1 and 2 will differ from the true due to random sampling e
 
 $$
 \begin{aligned} 
-\text{ratio comparing approaches} &= \frac{\text{variance of sample means ESTIMATED using sample means}}{\text{variance of sample means ESTIMATED using CLT shortcut formula}}\\
+\text{ratio comparing approaches} &= \frac{\text{variance of sample means using ESTIMATED Observed Variance}}{\text{variance of sample means using using ESTIMATED Expected Variance}}\\
 &=\frac{\frac{\sum_{i=1}^{a=3}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}}{\frac{s_{people}^2}{n}}\\
 &=\frac{`r method1_var`}{`r est_mean_var_clt`}\\
 &= `r method1_var/est_mean_var_clt`\\
@@ -409,7 +409,7 @@ $$
 
 ## Frame of reference: Random sampling only
 
-In this section we focus on using simulations to establish a frame of reference for interpreting the variance ratio in a scenario where random sampling is the only reason sample means differ from each other. Because random sampling is the only reasons the sample means differ both formulas are estimating the same thing. However, due to random sampling error, the the formulas may differ.
+In this section we focus on using simulations to establish a frame of reference for interpreting the variance ratio in a scenario where random sampling is the only reason sample means differ from each other. Because random sampling is the only reason the sample means differ both formulas are estimating the same thing. However, due to random sampling error, the numbers producted by the formulas may differ.
 
 
 ### Simulation of 1 population
@@ -418,7 +418,7 @@ In this section we focus on using simulations to establish a frame of reference 
 knitr::include_graphics("ch_deep_sampling/images/figure2.png")
 ```
 
-The simplest scenario to understand the estimation formulas we have discussed is the one illustrated in Figure \@ref(fig:sim1pop) above. In this scenario, we obtain 3 samples from the population of people and then used that data to **estimate** the variance of the distribution of sample means using Approach 1 and Approach 2. Then we create a ratio of those two values (Approach 1/Approach 2). Each additional row of the table shows a case where we did this same thing with three new samples.
+The simplest scenario to understand the estimation formulas we have discussed is the one illustrated in Figure \@ref(fig:sim1pop) above. In this scenario, we obtain 3 samples from the population of people and then used that data to **estimate** the variance of the distribution of sample means using Approach 1 Estimated Observed Variance and Approach 2 Estimated Expected Variance. Then we create a ratio of those two values (Approach 1/Approach 2). Each additional row of the table shows a case where we did this same thing with three new samples.
 
 We begin by creating the population in R:
 
@@ -450,7 +450,7 @@ The results of the 100,000 simulations are placed in the data set called data_ra
 head(data_ratios)
 ```
 
-When you inspect the table above, recognize that for the first row of the table we obtained 3 random samples from the population of people and then used that data to **estimate** the variance of the sampling distribution of means using Approach 1 and Approach 2 (approach_1\_total_var_est and approach_2\_clt_est, respectively). Then we created a ratio of those two values (approach_1\_var_est/approach_2\_clt_est) and placed that in the table (var_ratio). Each additional row of table shows a case were were did this same thing with three new samples. There are a total of 100,000 rows in this table.
+When you inspect the table above, recognize that for the first row of the table we obtained 3 random samples from the population of people and then used that data to **estimate** the variance of the sampling distribution of means using Approach 1 and Approach 2 (method_1_obs_var_est and method_2_exp_var_est, respectively). Then we created a ratio of those two values (method_1_obs_var_est/method_2_exp_var_est) and placed that in the table (var_ratio). Each additional row of table shows a case were were did this same thing with three new samples. There are a total of 100,000 rows in this table.
 
 We obtain the summary statistics with the skim command:
 
@@ -482,7 +482,7 @@ ggplot(data = data_ratios, mapping = aes(x = var_ratio)) +
   geom_histogram(breaks = seq(0, 10, by = .5)) +
   scale_x_continuous(breaks = seq(0,10, by = .5)) +
   coord_cartesian(xlim = c(0,10), ylim = c(0, 40000)) +
-  xlab("Variance Ratio: (approach_1_total_var / approach_2_clt)") +
+  xlab("Variance Ratio: (approach_1_total_var / approach_2_expected_var)") +
   ylab("Frequency") +
   theme_classic()
 ```
@@ -516,7 +516,7 @@ pop2 <- pop1
 pop3 <- pop1
 ```
 
-Then, we obtain a sample from each population of people and calculate a sample mean. When we use Approach 1: Total variance we think of these three sample means as being a random sample ($a = 3$) of the infinite distribution of sample means ($K = \infty$). The variance of the three sample means is an estimate of the variance of the distribution of sample means. When we use Approach 2: CLT Shortcut we use the people from the three sample to estimate the variance of the population of people. We use our estimate of the variance of the population of people in the Approach 2: CLT Shortcut formula to estimate the variance of the distribution of sample means. Then we calculate the ratio of Approach 1: Total variance divided by Approach 2: CLT Shortcut.
+Then, we obtain a sample from each population of people and calculate a sample mean. When we use Approach 1: Observed variance we think of these three sample means as being a random sample ($a = 3$) of the infinite distribution of sample means ($K = \infty$). The variance of the three sample means is an estimate of the TOTAL variance of the distribution of sample means. When we use Approach 2: Expected Variance we use the people from the three sample to estimate the variance of the population of people. Then, we use our estimate of the variance of the population of people in the Approach 2: Expected Variance formula to estimate the variance of the distribution of sample means. Then we calculate the ratio of Approach 1: Estimated Observed Variance (total variance) divided by Approach 2: Expected Variance (random sampling)
 
 **Then we repeat this process 100,000 times to see how well this process works on average - via the R commands below.**
 
@@ -574,7 +574,7 @@ ggplot(data = data_ratios3, mapping = aes(x = var_ratio)) +
   geom_vline(xintercept = 3.88, color = "blue", size = 1) +
   scale_x_continuous(breaks = seq(0,10, by = .5)) +
   coord_cartesian(xlim = c(0,10), ylim = c(0, 40000)) +
-  xlab("Variance Ratio: (approach_1_total_var / approach_2_clt)") +
+  xlab("Variance Ratio: (approach_1_obs_var / approach_2_expected_var") +
   ylab("Frequency") +
   theme_classic()
 ```
@@ -653,9 +653,9 @@ Much of what we have learned is summarized in the table below.
 |    People    |           Variance           |          $\sigma_{people}^2 = \frac{\sum_{i=1}^{N}{(X_i - \mu_{people})^2}}{N}$          |   $s_{people}^2 = VAR = \frac{\sum_{i=1}^{n}{(x_i - \bar{x}_{people})^2}}{n-1}$   |
 |    People    |      Standard Deviation      |       $\sigma_{people} = \sqrt{\frac{\sum_{i=1}^{N}{(X_i - \mu_{people})^2}}{N}}$        | $s_{people} = SD = \sqrt{\frac{\sum_{i=1}^{n}{(x_i - \bar{x}_{people})^2}}{n-1}}$ |
 | Sample Means |             Mean             |               $\mu_{\bar{x}} = \frac{\sum_{i=1}^{K=\infty}{\bar{x}_i}}{K}$               |               $\bar{\bar{x}} = \frac{\sum_{i=1}^{a}{\bar{x}_i}}{a}$               |
-| Sample Means |      Approach 1: TotalVariance      |  $\sigma_{\bar{x}}^2 = \frac{\sum_{i=1}^{K=\infty}{(\bar{x}_i - \mu_{\bar{x}})^2}}{K}$   |    $s_{\bar{x}}^2 = \frac{\sum_{i=1}^{a}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}$    |
-| Sample Means |    Approach 2 CLT: Random sampling variance    |                    $\sigma_{\bar{x}}^2 = \frac{\sigma_{people}^2}{n}$                    |                     $s_{\bar{x}}^2 = \frac{s_{people}^2}{n}$                      |
-| Sample Means | Approach 2 CLT: Standard Error | $\sigma_{\bar{x}} = \sqrt{\frac{\sigma_{people}^2}{n}}=\frac{\sigma_{people}}{\sqrt{n}}$ |   $s_{\bar{x}} = SE=\sqrt{\frac{s_{people}^2}{n}}=\frac{s_{people}}{\sqrt{n}}$    |
+| Sample Means |      Approach 1 Observed Variance: TotalVariance      |  $\sigma_{\bar{x}}^2 = \frac{\sum_{i=1}^{K=\infty}{(\bar{x}_i - \mu_{\bar{x}})^2}}{K}$   |    $s_{\bar{x}}^2 = \frac{\sum_{i=1}^{a}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}$    |
+| Sample Means |    Approach 2 Expected Variance: Random sampling variance    |                    $\sigma_{\bar{x}}^2 = \frac{\sigma_{people}^2}{n}$                    |                     $s_{\bar{x}}^2 = \frac{s_{people}^2}{n}$                      |
+| Sample Means | Approach 2 Standard Error: Random sampling standard deviation | $\sigma_{\bar{x}} = \sqrt{\frac{\sigma_{people}^2}{n}}=\frac{\sigma_{people}}{\sqrt{n}}$ |   $s_{\bar{x}} = SE=\sqrt{\frac{s_{people}^2}{n}}=\frac{s_{people}}{\sqrt{n}}$    |
 
 
 
@@ -672,6 +672,6 @@ We are interested in the variance of the distribution of sample means (Figure \@
 
 We used two different approaches to estimating the variance of the distribution of sample means. With our "all knowing cap" on we can see, in the table above, that both approaches produce values that differ from the actual variance of the distribution. That's because the best we can do with sample data is obtain an estimate of the variance of the distribution of means - we can never know the actual variance of the distribution of sample means.
 
-Each variance estimate (Approach 1 or Approach 2) will likely produce values that differ from the actual variance of sample means. The first estimate, Approach 1, differs from 31.26472 due to sampling error. That is, we used 3 sample means ($a=3$) to estimate the variance of an infinite set of sample means ($A = \infty$). Because we used such a small subset of sample means (3 of $\infty$) our estimate will differ from 31.26472 due to sampling error.
+Each variance estimate (Approach 1 or Approach 2) will likely produce values that differ from the actual variance of sample means. The first estimate, Approach 1 Observed Variance, differs from 31.26472 due to sampling error. That is, we used 3 sample means ($a=3$) to estimate the variance of an infinite set of sample means ($A = \infty$). Because we used such a small subset of sample means (3 of $\infty$) our estimate will differ from 31.26472 due to sampling error.
 
-Likewise, the second estimate, Approach 2 CLT, used a formula that relies on knowledge of variance of the population of people ($\sigma_{people}^2$) to determine the variance of the distribution of sample means. We had to estimate $\sigma_{people}^2$ using $s_{people}^2$. Because we used such a small subset of people ($n = 15$, 5 from each sample) from the distribution of people ($N = 100000$) for our estimate, $s_{people}^2$, it will differ from $\sigma_{people}^2$ due to sampling error. Consequently, our estimate of the variance of sample means, which relies on this value, differs fron 31.26472 due to sampling error.
+Likewise, the second estimate, Approach 2 Expected Variance, used a formula that relies on knowledge of variance of the population of people ($\sigma_{people}^2$) to determine the variance of the distribution of sample means. We had to estimate $\sigma_{people}^2$ using $s_{people}^2$. Because we used such a small subset of people ($n = 15$, 5 from each sample) from the distribution of people ($N = 100000$) for our estimate, $s_{people}^2$, it will differ from $\sigma_{people}^2$ due to sampling error. Consequently, our estimate of the variance of sample means, which relies on this value, differs fron 31.26472 due to sampling error.
