--- a/16-sampling-nway.Rmd
+++ b/16-sampling-nway.Rmd
@@ -397,10 +397,10 @@ $$
 \end{aligned}
 $$
 
-The formula above, for the variability due to sampling error alone, is based on the Central Limit Theorem (CLT) and is reviewed extensively in past chapters.
+The formula above, for the variability due to sampling error alone, is called Expected Variance, and is reviewed extensively in past chapters.
 
 
-### CLT $A$: Juggling
+### Expect Variance $A$: Juggling
 
 In the context of the juggling main effect means, each juggle mean is based on $nb=(5)(3)=15$ people. 
 Therefore, for these juggling main effect means the general formula for the variance due to sampling error is below:
@@ -434,7 +434,7 @@ knitr::include_graphics("ch_deeper_nway/images/pop_equal_means_a.png")
 
 
 
-### CLT $B$: Preparation
+### Expected Variance $B$: Preparation
 
 In the context of the preparation main effect means, each preparation mean is based on $na=(5)(2)=10$ people. 
 Therefore, for these preparation main effect means the general formula for the variance due to sampling error is below:
@@ -466,7 +466,7 @@ Thus, when we have three preparation populations from which we obtained samples 
 knitr::include_graphics("ch_deeper_nway/images/pop_equal_means_b.png")
 ```
 
-### CLT Cells
+### Expected Variance Cells
 
 In the context of the cell means, each cell mean is based on $n=5$ people. 
 Therefore, for these cell means the general formula for the variance due to sampling error is below:
@@ -490,7 +490,7 @@ $$
 I omit the diagram for cells populations and sample mean distributions. This is done because there are so many different ways cells might be examined. There would be too many diagrams - and it would be misleading to present just one diagram. But don't worry we will return to this issue, with diagrams, when we start talking about interactions in more detail.
 
 
-### CLT Summary
+### Expected Variance Summary
 
 ```{r, eval = F, echo = F}
 #   Calculation | A = Juggling | B = Preparation | Cells |
@@ -511,7 +511,7 @@ Notice that the degrees of freedom for the sampling error variance is the same f
 
 ## Main Effect $A$: Juggling
 
-### Total variance $A$
+### Observed Variance $A$ (total variance)
 
 We might wonder if there is an effect of juggling on calmness scores ignoring the effect of preparation. Said another way, we might wonder if the mean of the **yes** juggling population ($\mu_{A1}$) is different from the mean of the **no** juggling population ($\mu_{A2}$). We examine this question by looking the **variance** in the population means. 
 
@@ -718,7 +718,7 @@ Comparison using $F$-ratio | $\frac{\frac{nb\sum(\bar{x_i}-\bar{\bar{x}})^2}{a-1
 
 ## Main Effect $B$: Preparation 
 
-### Total variance $B$
+### Observed Variance $B$ [total variance]
 
 Let's look at the other independent variable: preparation. As before, we might wonder if there is an effect of preparation on calmness scores ignoring the effect of juggling. Said another way, we might wonder if the means of the three preparation populations (low [$\mu_{B1}$], medium [$\mu_{B2}$], high [$\mu_{B3}$]) are different from each other. We examine this question by looking the **variance** in the population means. 
 
@@ -975,7 +975,7 @@ no_juggle | $`r round(rg4,2)`$ |  $`r round(rg5,2)`$ | $`r round(rg6,2)`$ |
 
 ## Interaction ($AB$)
 
-### Total variance $AB$
+### Observed Variance $AB$ [total variance]
 
 The residual cell means calculated in the previous section are presented below -- as a starting point for the interaction calculations.
 
@@ -1097,8 +1097,8 @@ Remember the $p$-value is the **probability of our data, or more extreme data,**
 
 Preparation| Formula | Expected value | degrees of freedom |
 :--------------:|:--------------:|:------------------:|:---------------:|
-Estimated total variance | $\frac{\sum (\overline{x_{residual_i}})^2}{(a-1)(b-1)} = 53.92667$ |$\frac{\sigma_{people}^2}{n} + \sigma_{AB}^2$ | $(a-1)(b-1)$
-Estimated variance sampling error | $\frac{s_{people}^2}{n}=\frac{60}{5}=12$ |$\frac{\sigma_{people}^2}{n}$ | $ab(n-1)$
+Estimated observed variance [total]| $\frac{\sum (\overline{x_{residual_i}})^2}{(a-1)(b-1)} = 53.92667$ |$\frac{\sigma_{people}^2}{n} + \sigma_{AB}^2$ | $(a-1)(b-1)$
+Estimated expected variance [sampling error] | $\frac{s_{people}^2}{n}=\frac{60}{5}=12$ |$\frac{\sigma_{people}^2}{n}$ | $ab(n-1)$
 Comparison using $F$-ratio |$\frac{\frac{\sum (\overline{x_{residual_i}} )^2}{(a-1)(b-1)}}{                  \frac{s_{people}^2}{n}}=\frac{53.92667}{12}=4.49$  |  $\frac{\frac{\sigma_{people}^2}{n} + \sigma_{AB}^2}{    \frac{\sigma_{people}^2}{n}}$ | $[(a-1)(b-1),ab(n-1)]$
 
 ### $AB$ typical (interaction)
