update typo interaction marginal mean text

--- a/16-sampling-nway.Rmd
+++ b/16-sampling-nway.Rmd
@@ -946,7 +946,7 @@ no_juggle| $`r xbar4` - `r mean_a2` = `r round(ra4,2)`$ | $`r xbar5` - `r mean_a
 
 #### Subtract $B$ marginal means
 
-Next, we take the residual. means from the previous step and remove the main effect of $B$. Recall the marginal means for low, medium, and high preparation were `r round(mean_a2,2)`, `r round(mean_b2,2)`, and `r round(mean_b3,2)`, respectively. We subtract these main effect means from the residual. means from the previous step.
+Next, we take the residual. means from the previous step and remove the main effect of $B$. Recall the marginal means for low, medium, and high preparation were `r round(mean_b1,2)`, `r round(mean_b2,2)`, and `r round(mean_b3,2)`, respectively. We subtract these main effect means from the residual. means from the previous step.
 
  Effect  | low_prep  | medium_prep| high_prep| 
 :-------:|---------|----------|-----|
