--- a/17-sampling-nway-cells.Rmd
+++ b/17-sampling-nway-cells.Rmd
@@ -509,6 +509,7 @@ psi<-sum(my.weights*cond.means) # Calculate psi
 Fvalue_psi<-(psi^2)/(sum((my.weights^2)/n.pergroup))/MS.w # Use MSw from omnibus ANOVA
 
 xcm1 = xbar1
+xcm2 = xbar2
 xcm2 = mean(c(xbar2, xbar3))
 xcm = c(xcm1, xcm2)
 xvar = var(xcm)
@@ -533,7 +534,7 @@ $$
 For the second mean, it's the average of two means. Note for this combined mean $n = 10$; because it was based on two cell means, each $n=5$.
 
 $$
-\bar{c_2} = \frac{\bar{x_2} + \bar{x_3}}{2} = \frac{ `r (xbar1 + xbar2)`}{2} = `r xcm2`
+\bar{c_2} = \frac{\bar{x_2} + \bar{x_3}}{2} = \frac{ `r (xbar2 + xbar3)`}{2} = `r xcm2`
 $$
 
 
