update chapter 19 to include data

--- a/19-multiple_regression.Rmd
+++ b/19-multiple_regression.Rmd
@@ -29,6 +29,12 @@ After the remotes package is installed, it can be used to install a package from
 remotes::install_github("dstanley4/fastInteraction")
 ```
 
+
+| Required Data |
+|-------------------|
+|[data_mr_ex.csv](data_mr_ex.csv)   |
+
+
 ## Overview
 
 Multiple regression is a means relating multiple predictor variables to a single criterion variable. We can determine the amount of variance in the criterion accounted for by the set of predictors ($R^2$), a single predictor on it's own ($r^2$), or the extent to which a single predictor accounts for unique variance account for in the criterion that is not accounted for by any of the other predictors ($sr^2$).
@@ -41,7 +47,7 @@ We are interested in using both IQ and age to predict video game scores so we re
 
 You can think of the multiple regression problem using a venn diagram:
 
-```{r. echo = FALSE}
+```{r echo = FALSE}
 knitr::include_graphics("ch_multiple_regression/images/mr_venn.png")
 ```
 
