--- a/packages.bib
+++ b/packages.bib
@@ -18,8 +18,8 @@
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
-  year = {2024},
-  note = {R package version 0.40},
+  year = {2025},
+  note = {R package version 0.42},
   url = {https://github.com/rstudio/bookdown},
 }
 
@@ -27,7 +27,7 @@
   title = {broom: Convert Statistical Objects into Tidy Tibbles},
   author = {David Robinson and Alex Hayes and Simon Couch},
   year = {2024},
-  note = {R package version 1.0.6},
+  note = {R package version 1.0.7},
   url = {https://broom.tidymodels.org/},
 }
 
@@ -98,8 +98,8 @@
 @Manual{R-janitor,
   title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
   author = {Sam Firke},
-  year = {2023},
-  note = {R package version 2.2.0},
+  year = {2024},
+  note = {R package version 2.2.1},
   url = {https://github.com/sfirke/janitor},
 }
 
@@ -107,7 +107,7 @@
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2024},
-  note = {R package version 1.48},
+  note = {R package version 1.49},
   url = {https://yihui.org/knitr/},
 }
 
@@ -115,14 +115,15 @@
   title = {learnSampling: Tools to help learn sampling},
   author = {David J. Stanley},
   year = {2020},
-  note = {R package version 0.2},
+  note = {R package version 0.2, commit ad120fb8aff8bbfde65fca5e14a5583a409a7fa2},
+  url = {https://github.com/dstanley4/learnSampling},
 }
 
 @Manual{R-lubridate,
   title = {lubridate: Make Dealing with Dates a Little Easier},
   author = {Vitalie Spinu and Garrett Grolemund and Hadley Wickham},
-  year = {2023},
-  note = {R package version 1.9.3},
+  year = {2024},
+  note = {R package version 1.9.4},
   url = {https://lubridate.tidyverse.org},
 }
 
@@ -170,7 +171,7 @@
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Christophe Dervieux and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2024},
-  note = {R package version 2.28},
+  note = {R package version 2.29},
   url = {https://github.com/rstudio/rmarkdown},
 }
 
