--- a/packages.bib
+++ b/packages.bib
@@ -11,7 +11,7 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2024},
+  year = {2025},
   url = {https://www.R-project.org/},
 }
 
@@ -19,15 +19,15 @@
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
   year = {2025},
-  note = {R package version 0.42},
+  note = {R package version 0.43},
   url = {https://github.com/rstudio/bookdown},
 }
 
 @Manual{R-broom,
   title = {broom: Convert Statistical Objects into Tidy Tibbles},
   author = {David Robinson and Alex Hayes and Simon Couch},
-  year = {2024},
-  note = {R package version 1.0.7},
+  year = {2025},
+  note = {R package version 1.0.8},
   url = {https://broom.tidymodels.org/},
 }
 
@@ -42,8 +42,8 @@
 @Manual{R-datasauRus,
   title = {datasauRus: Datasets from the Datasaurus Dozen},
   author = {Colin Gillespie and Steph Locke and Rhian Davies and Lucy {D'Agostino McGowan}},
-  year = {2024},
-  note = {R package version 0.1.8},
+  year = {2025},
+  note = {R package version 0.1.9},
   url = {https://github.com/jumpingrivers/datasauRus},
 }
 
@@ -58,7 +58,7 @@
 @Manual{R-emoGG,
   title = {emoGG: Use Emoji in ggplot2},
   author = {David L Miller},
-  year = {2024},
+  year = {2025},
   note = {R package version 0.0.4, commit 4210b29f8eaaac87bee86f8a1bd6d10a73c86504},
   url = {https://github.com/dill/emoGG},
 }
@@ -82,16 +82,16 @@
 @Manual{R-GGally,
   title = {GGally: Extension to ggplot2},
   author = {Barret Schloerke and Di Cook and Joseph Larmarange and Francois Briatte and Moritz Marbach and Edwin Thoen and Amos Elberg and Jason Crowley},
-  year = {2024},
-  note = {R package version 2.2.1},
+  year = {2025},
+  note = {R package version 2.3.0},
   url = {https://ggobi.github.io/ggally/},
 }
 
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington and Teun {van den Brand}},
-  year = {2024},
-  note = {R package version 3.5.1},
+  year = {2025},
+  note = {R package version 3.5.2},
   url = {https://ggplot2.tidyverse.org},
 }
 
@@ -106,8 +106,8 @@
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
-  year = {2024},
-  note = {R package version 1.49},
+  year = {2025},
+  note = {R package version 1.50},
   url = {https://yihui.org/knitr/},
 }
 
@@ -130,16 +130,16 @@
 @Manual{R-MBESS,
   title = {MBESS: The MBESS R Package},
   author = {Ken Kelley},
-  year = {2023},
-  note = {R package version 4.9.3},
-  url = {https://www3.nd.edu/~kkelley/site/MBESS.html},
+  year = {2025},
+  note = {R package version 4.9.41},
+  url = {https://www3.nd.edu/~kkelley/},
 }
 
 @Manual{R-purrr,
   title = {purrr: Functional Programming Tools},
   author = {Hadley Wickham and Lionel Henry},
-  year = {2023},
-  note = {R package version 1.0.2},
+  year = {2025},
+  note = {R package version 1.1.0},
   url = {https://purrr.tidyverse.org/},
 }
 
@@ -157,6 +157,7 @@
   year = {2022},
   note = {R package version 1.1-3},
   url = {https://CRAN.R-project.org/package=RColorBrewer},
+  doi = {10.32614/CRAN.package.RColorBrewer},
 }
 
 @Manual{R-readr,
@@ -194,8 +195,8 @@
 @Manual{R-tibble,
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
-  year = {2023},
-  note = {R package version 3.2.1},
+  year = {2025},
+  note = {R package version 3.3.0},
   url = {https://tibble.tidyverse.org/},
 }
 
@@ -218,8 +219,8 @@
 @Manual{R-TOSTER,
   title = {TOSTER: Two One-Sided Tests (TOST) Equivalence Testing},
   author = {Daniel Lakens and Aaron Caldwell},
-  year = {2024},
-  note = {R package version 0.8.3},
+  year = {2025},
+  note = {R package version 0.8.4},
   url = {https://aaroncaldwell.us/TOSTERpkg/},
 }
 
