fixed expected variance wording error

--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -150,9 +150,7 @@ Be we more often see it represented completely symbolically as per Equation \@re
 
 An inspection of Equation \@ref(eq:popvarCLTxbardeep) reveals the variance of the distribution of sample means **DUE TO RANDOM SAMPLING ERROR ONLY**(see Figure \@ref(fig:chdeepfigure1)B) depends on both the number of people in each sample ($n$) and the variability in the people's heights in the population (see Figure \@ref(fig:chdeepfigure1)B, $\sigma_{people}^2$).
 
-The reason this formula works should not be obvious - at all. If you are looking at this formula trying to figure out why it works - I suggest you stop and just accept that it does work. If you want to understand why it works, I suggest you [consult](https://archive.org/details/statisticsfifthe00will) [@hays1994statistics] who provides a statistical proof for the Central Limit Theorem.
-
-It's helpful, moving forward, to think of this formula ($\frac{\sigma_{people}^2}{n}$) as representing the *variability in means due to random sampling*. The formula was devired from teh Central Limit Theorem so we refer to it as the Expected Variance approach. No matter the situation - this formula will always reflect the **variability in sample means due ONLY to random sampling**.
+It's helpful, moving forward, to think of this formula ($\frac{\sigma_{people}^2}{n}$) as representing the *EXPECTED variability in means due to random sampling*. The expected variability formula will always reflect the **variability in sample means due ONLY to random sampling**.
 
 Previously, we learned that the variance of the distribution of people in Figure \@ref(fig:chdeepfigure1)A is $\sigma_{people}^2=156.3236$. Consequently, we can use Equation \@ref(eq:popvarCLTxbardeep) to calculate the variance of the distribution of sample means in Figure \@ref(fig:chdeepfigure1)B:
 
@@ -355,7 +353,7 @@ We use different names to refer to the resulting average variance estimate - we 
 #### Estimating $\sigma_{\bar{x}}^2$ with Expected Variance Approach
 
 
-**If we assume that random sampling error is the only source of variance in the distribution of sample means** we can estimate $\sigma_{\bar{x}}^2$ using the formula we derived from the Central Limit Theorem. 
+**If we assume that random sampling error is the only source of variance in the distribution of sample means** we can estimate $\sigma_{\bar{x}}^2$ using the expected variance formula.
 
 More specifically, armed with the estimate of the variance of the people in the population ($s_{people}^2$) we can use the Estimated Expected Variance formula to obtain an estimate of the variance of the distribution of sample means using Equation \@ref(eq:estpopvarmeansclt) below.
 
