--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -536,7 +536,7 @@ ggplot(data = data_ratios3, mapping = aes(x = var_ratio)) +
   geom_histogram(breaks = seq(0, 10, by = .5)) +
   scale_x_continuous(breaks = seq(0,10, by = .5)) +
   coord_cartesian(xlim = c(0,10), ylim = c(0, 40000)) +
-  xlab("Variance Ratio: (approach_1_total_var / approach_2_clt)") +
+  xlab("Variance Ratio: (approach_1_total_var / approach_2_expected)") +
   ylab("Frequency") +
   theme_classic()
 ```
@@ -551,7 +551,7 @@ ggplot(data = data_ratios3, mapping = aes(x = var_ratio)) +
   geom_vline(xintercept = 77.72, color = "red", size = 1) +
   scale_x_continuous(breaks = seq(0,80, by = 5)) +
   coord_cartesian(xlim = c(0,80), ylim = c(0, 40000)) +
-  xlab("Variance Ratio: (approach_1_total_var / approach_2_clt)") +
+  xlab("Variance Ratio: (approach_1_total_var / approach_2_expected)") +
   ylab("Frequency") +
   theme_classic()
 ```
